<resources>
    <string name="app_name">PocketMike_CMPSC483W</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="LightText">Light:</string>
    <string name="OnText">On</string>
    <string name="OffText">Off</string>
    <string name="Title">GE Pocket Mike</string>
    <string name="Mode1Text">Mode 1</string>
    <string name="Mode2Text">Mode 2</string>
    <string name="Mode3Text">Mode 3</string>
    <string name="SettingsText">Settings</string>
    <string name="CopyrightText">Copyright</string>
    <string name="TimeOfFlightText">Time of Flight</string>
    <string name="MeasurementText">Measurement</string>
    <string name="defaultNumbers">000.000</string>
    <string name="defaultVelocityNumbers">0000</string>
    <string name="invalidVelocityNumbers">ZZZZZZZ</string>
    <string name="defaultLatitude">360</string>
    <string name="defaultLongitude">360</string>
    <string name="startingLatitude">000.0000000</string>
    <string name="startingLongitude">000.0000000</string>
    <string name="BackText">Back</string>
    <string name="WorkInProgressText">Work in Progress</string>
    <string name="defaultUnits">mm</string>
    <string name="GetDataText">Get Data</string>
    <string name="GetThicknessText">Get Thickness</string>
    <string name="GetPocket">Get Pocket</string>
    <string name="title_activity_mode1">Mode1Activity</string>
    <string name="title_activity_mode2">Mode2Activity</string>
    <string name="title_activity_mode3">Mode3Activity</string>
    <string name="title_activity_settings">SettingsActivity</string>
    <string name="title_activity_copyright">CopyrightActivity</string>
    <string name="ChangeUnitsText">Change Units</string>
    <string name="getCurrentLocationText">Get Current Location</string>
    <string name="updateCurrentLocationText">Update Current Location</string>
    <string name="currentLocationText">Current Location</string>
    <string name="longitudeText">Longitude:</string>
    <string name="latitudeText">Latitude:</string>
    <string name="lightText">Light:</string>
    <string name="VelocityText">Velocity:</string>
    <string name="setText">Set</string>
    <string name="getText">Get</string>
    <string name="storeDataText">Store Data</string>
    <string name="VelText">|Velocity|</string>
    <string name="RowText">Row|</string>
    <string name="UnitText">|Unit|</string>
    <string name="VelUnitText">|Velocity Unit|</string>
    <string name="DateText">|Date|</string>
    <string name="TimeText">|Time</string>
    <string name="ThicknessText">|Thickness|</string>
    <string name="DeleteText">Delete Data</string>
    <string name="ExportText">Export Data</string>
    <string-array name="velocityUnits">
        <item>m/s</item>
        <item>in/us</item>
    </string-array>
</resources>
