<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/Title"
        android:id="@+id/textView"
        android:height="40sp"
        android:textSize="36sp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"/>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Mode1Text"
        android:id="@+id/Mode1Button"
        android:layout_below="@+id/textView"
        android:layout_alignLeft="@+id/textView"
        android:layout_alignStart="@+id/textView"
        android:layout_marginTop="75dp"
        android:layout_alignRight="@+id/textView"
        android:layout_alignEnd="@+id/textView"
        android:clickable="true"
        android:onClick="Mode1Activity"
        />


    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Mode2Text"
        android:id="@+id/Mode2Button"
        android:layout_centerVertical="true"
        android:layout_alignLeft="@+id/Mode1Button"
        android:layout_alignStart="@+id/Mode1Button"
        android:layout_alignRight="@+id/Mode1Button"
        android:layout_alignEnd="@+id/Mode1Button"
        android:clickable="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Mode3Text"
        android:id="@+id/Mode3Button"
        android:layout_below="@+id/Mode2Button"
        android:layout_alignLeft="@+id/Mode2Button"
        android:layout_alignStart="@+id/Mode2Button"
        android:layout_marginTop="56dp"
        android:layout_alignRight="@+id/Mode2Button"
        android:layout_alignEnd="@+id/Mode2Button"
        android:clickable="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/SettingsText"

        android:clickable="true"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:id="@+id/SettingsButton" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/CopyrightText"
        android:clickable="true"
        android:id="@+id/CopyrightButton"
        android:layout_alignTop="@+id/SettingsButton"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />
</RelativeLayout>
