<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="gepocketmikecmpsc483w.pocketmike_cmpsc483w.SettingsActivity">

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/BackText"
        android:id="@+id/SettingsBackButton"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/SettingsText"
        android:id="@+id/SettingsText"
        android:textSize="40sp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/lightText"
        android:id="@+id/LightTextView"
        android:layout_below="@+id/SettingsText"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="67dp"
        android:textSize="32sp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/OnText"
        android:id="@+id/onButton"
        android:layout_alignLeft="@+id/SettingsText"
        android:layout_alignStart="@+id/SettingsText"
        android:layout_alignTop="@+id/LightTextView"
        android:layout_alignBottom="@+id/LightTextView" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/OffText"
        android:id="@+id/offButton"
        android:layout_alignTop="@+id/onButton"
        android:layout_toRightOf="@+id/SettingsText"
        android:layout_toEndOf="@+id/SettingsText"
        android:layout_alignBottom="@+id/onButton" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/VelocityText"
        android:id="@+id/VelocityTextView"
        android:textSize="32sp"
        android:layout_centerVertical="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:id="@+id/editVelocityText"
        android:layout_alignTop="@+id/VelocityTextView"
        android:layout_toRightOf="@+id/VelocityTextView"
        android:layout_toLeftOf="@+id/setVelocityButton"
        android:layout_toStartOf="@+id/setVelocityButton"
        android:inputType="number|numberDecimal" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/setText"
        android:id="@+id/setVelocityButton"
        android:layout_below="@+id/editVelocityText"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <Spinner
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/unitsSpinner"
        android:layout_alignBottom="@+id/VelocityTextView"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_toRightOf="@+id/editVelocityText"
        android:layout_toEndOf="@+id/editVelocityText"
        android:spinnerMode="dropdown" />

</RelativeLayout>
